refactor: 하드코딩된 localhost URL 제거 및 환경변수 기반 API 주소와 동적 CORS 설정 적용